devtools/client/themes/tooltips.css
@import url(chrome://devtools/skin/badge.css);
@import url(chrome://devtools/skin/accessibility-color-contrast.css);
@import url(chrome://devtools/content/shared/widgets/cubic-bezier.css);
@import url(chrome://devtools/content/shared/widgets/filter-widget.css);
@import url(chrome://devtools/content/shared/widgets/spectrum.css);



.theme-dark {
  --bezier-diagonal-color: #eee;
  --bezier-grid-color: rgba(0, 0, 0, 0.2);
  --onboarding-link-color: var(--theme-highlight-blue);
  --onboarding-link-active-color: var(--blue-40);

  
  --theme-tooltip-color: var(--theme-text-color-strong);
  --theme-tooltip-background: var(--theme-popup-background);
  --theme-tooltip-shadow: rgba(25, 25, 25, 0.76);

  
  

  --theme-arrowpanel-background: var(--theme-popup-background);
  --theme-arrowpanel-color: var(--theme-popup-color);
  --theme-arrowpanel-border-color: var(--theme-popup-border-color);
  --theme-arrowpanel-separator: rgba(249,249,250,.1);
  --theme-arrowpanel-dimmed: var(--theme-popup-dimmed);
  --theme-arrowpanel-dimmed-further: rgba(249,249,250,.15);
  --theme-arrowpanel-disabled-color: rgba(249,249,250,.5);
}

.theme-light {
  --bezier-diagonal-color: rgba(0, 0, 0, 0.2);
  --bezier-grid-color: rgba(0, 0, 0, 0.05);
  --onboarding-link-color: var(--blue-60);
  --onboarding-link-active-color: var(--blue-70);

  
  --theme-tooltip-color: var(--theme-body-color);
  --theme-tooltip-background: rgb(255, 255, 255);
  --theme-tooltip-shadow: var(--grey-90-a10);

  
  

  --theme-arrowpanel-background: var(--theme-popup-background);
  --theme-arrowpanel-color: var(--theme-popup-color);
  --theme-arrowpanel-border-color: var(--theme-popup-border-color);
  --theme-arrowpanel-separator: ThreeDShadow;
  --theme-arrowpanel-dimmed: var(--theme-popup-dimmed);
  --theme-arrowpanel-dimmed-further: hsla(0,0%,80%,.45);
  --theme-arrowpanel-disabled-color: GrayText;
}

:root {
  --theme-arrowpanel-border-radius: 0px;
}
:root[platform="mac"] {
  --theme-arrowpanel-border-radius: 3.5px;
}

:root[platform="mac"].theme-light {
  --theme-arrowpanel-separator: hsla(210,4%,10%,.14);
}

strong {
  font-weight: bold;
}



.devtools-tooltip-css-variable {
  color: var(--theme-body-color);
  padding: 2px;
}



.devtools-tooltip-inactive-css {
  color: var(--theme-body-color);
  padding: 7px 14px 9px;
  font-size: 12px;
  margin: 0;
}

.devtools-tooltip-inactive-css,
.devtools-tooltip-inactive-css strong {
  -moz-user-select: text;
  -moz-user-focus: normal;
}

.devtools-tooltip-inactive-css p {
  margin-block-start: 0;
  margin-block-end: calc(1em - 4px);
}

.devtools-tooltip-inactive-css p:last-child {
  margin-block-end: 0;
}

.devtools-tooltip-inactive-css .link {
  color: var(--theme-highlight-blue);
  cursor: pointer;
}



.devtools-tooltip-tiles {
  background-color: #eee;
  background-image: linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc),
    linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
  background-size: 20px 20px;
  background-position: 0 0, 10px 10px;
}

.tooltip-container {
  display: none;
  position: fixed;
  z-index: 9999;
  background: transparent;
  pointer-events: none;
  overflow: hidden;
  filter: drop-shadow(0 2px 8px var(--theme-tooltip-shadow));
}

.tooltip-xul-wrapper {
  -moz-appearance: none;
  background: transparent;
  overflow: visible;
  border-style: none;
}

.tooltip-xul-wrapper .tooltip-container {
  position: absolute;
}

.tooltip-top {
  flex-direction: column;
}

.tooltip-bottom {
  flex-direction: column-reverse;
}

.tooltip-panel{
  background-color: var(--theme-tooltip-background);
  pointer-events: all;
  flex-grow: 1;
}

.tooltip-visible {
  display: flex;
}

.tooltip-hidden {
  display: flex;
  visibility: hidden;
}



.tooltip-flexible-height .tooltip-panel {
  
  flex-grow: 0;
}

.tooltip-flexible-height .tooltip-filler {
  
  flex-grow: 1;
}



.tooltip-xul-wrapper[type="arrow"][side] {
  margin: 0;
}




.tooltip-xul-wrapper[type="arrow"] .panel-arrowcontent {
  margin: 0;
  padding: 0;
  background: transparent;
  border: none;
  box-shadow: none;
}



.tooltip-xul-wrapper .tooltip-container {
  
  filter: none;
}

.tooltip-container[type="arrow"] > .tooltip-panel {
  position: relative;
  min-height: 10px;
  box-sizing: border-box;
  width: 100%;
  border-radius: var(--theme-arrowpanel-border-radius);
}

.tooltip-top[type="arrow"] .tooltip-panel {
  top: 0;
}

.tooltip-bottom[type="arrow"] .tooltip-panel {
  bottom: 0;
}

.tooltip-arrow {
  position: relative;
  height: 16px;
  width: 32px;
  overflow: hidden;
  flex-shrink: 0;
}


.tooltip-container:-moz-locale-dir(rtl),
.tooltip-container:dir(rtl) {
  direction: ltr;
}

.tooltip-panel:-moz-locale-dir(rtl),
.tooltip-panel:dir(rtl) {
  direction: rtl;
}

.tooltip-top .tooltip-arrow {
  margin-top: -1px;
}

.tooltip-bottom .tooltip-arrow {
  margin-bottom: -1px;
}

.tooltip-arrow:before {
  content: "";
  position: absolute;
  width: 21px;
  height: 21px;
  margin-left: 4px;
  background: linear-gradient(-45deg,
    var(--theme-tooltip-background) 50%, transparent 50%);
  border: 0 none;
  pointer-events: all;
}

.tooltip-bottom .tooltip-arrow:before {
  margin-top: 5px;
  transform: rotate(225deg);
}

.tooltip-top .tooltip-arrow:before {
  margin-top: -12px;
  transform: rotate(45deg);
}


.tooltip-container[type="arrow"]:not(.tooltip-container-xul) > .tooltip-panel,
.tooltip-container[type="arrow"]:not(.tooltip-container-xul) > .tooltip-arrow::before {
  border: 1px solid var(--theme-arrowpanel-border-color);
}



.tooltip-container[type="doorhanger"] > .tooltip-panel {
  padding: 2px 0;
  color: var(--theme-arrowpanel-color);
  margin: 4px;
  max-width: 320px;
}
/* ... */

