Bug 1558371 - Improve tooltip readability in dark mode r=pbro
Changed the color in `.devtools-tooltip-inactive-css` to match the color of the meatball menu

Differential Revision: https://phabricator.services.mozilla.com/D43756

UltraBlame original commit: 10ea0cf78737da248968dfd1404d6d2d639123dc

--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -82,7 +82,7 @@ strong {
 
 
 .devtools-tooltip-inactive-css {
-  color: var(--theme-body-color);
+  color: var(--theme-arrowpanel-color);
   padding: 7px 14px 9px;
   font-size: 12px;
   margin: 0;
